Fix: style textarea per sample I misinterpreted the textarea sample; I didn't see the bottom gif which showed the above picture in greater detail. Removed the outline, resize on the textarea. Added bottom border to the textarea. Removed previous spacing between textarea and the label.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -5,14 +5,17 @@ form#tweet-form {
 }
 
 label#tweet-label {
-  border-bottom: solid;
-  border-width: 0.15em;
-  padding-bottom: 0.25em;
   font-weight: bold;
 }
 
 textarea#tweet-text {
   margin-top: 0.37em;
+  background: inherit;
+  font-weight: bold;
+  border: none;
+  resize: none;
+  border-bottom: 0.15em solid;
+  outline: none;
 }
 
 button#tweet-button {
